--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,9 @@
+[build-system]
+requires = ["uv_build>=0.8.15,<0.9.0"]
+build-backend = "uv_build"
+
 [project]
-name = "my-mcp-server"
+name = "solvedac-server"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
@@ -9,4 +13,13 @@ dependencies = [
     "fastmcp>=2.12.5",
     "openai>=2.5.0",
     "python-dotenv>=1.1.1",
+    "smithery>=0.4.2",
 ]
+
+[project.scripts]
+dev = "smithery.cli.dev:main"
+playground = "smithery.cli.playground:main"
+
+# Points to your server function
+[tool.smithery] 
+server = "solvedac_server.server:create_server"
